--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-input-mask": "^2.0.4"
+    "react-input-mask": "^2.0.4",
+    "react-router-bootstrap": "^0.26.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-input-mask": "^3.0.6",
+    "@types/react-router-bootstrap": "^0.26.8",
     "@vitejs/plugin-react": "^4.3.3",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.7",
